--- a/css/styles.css
+++ b/css/styles.css
@@ -92,5 +92,11 @@ strong {
     width: 50%;
     min-height: 100vh; 
   }
+
+  .main-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
 }
 
