--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ h1 {
   font-size: 2.25rem;
   font-weight: 300;
   color: #fff;
-  margin: 2em 0;
+  margin: 0;
 }
 
 h1 + p {
@@ -33,7 +33,6 @@ h2 {
 h2 + p {
   color: #F18119;
   font-weight: 900;
-  font-size: 1rem;
   margin-top: 0;
   text-transform: uppercase;
 }
@@ -66,11 +65,21 @@ strong {
   padding: 0 .5em 2em;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  min-height: 50vh;
 }
 
 .main-content {
   padding: 2em 1em;
 }
+
+.intro  > * ,
+.main-content > * {
+  max-width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 
 @media (min-width: 500px) {
   body {
@@ -98,5 +107,6 @@ strong {
     flex-direction: column;
     justify-content: center;
   }
+
 }
 
