--- a/css/styles.css
+++ b/css/styles.css
@@ -40,9 +40,13 @@ h2 + p {
 .top-text {
   font-size: 0.625rem;
   font-weight: 900;
+  margin: 0;
+  padding-top: 2px;
   color: #F18119;
   text-transform: uppercase;
   order: -1;
+  border-top: solid 5px #F18119;
+  border-image: linear-gradient(to left, #FF713B, #FFA51D) 1;
 }
 
 .fine-print {
@@ -78,6 +82,55 @@ strong {
   max-width: 400px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.email-collector {
+  width: 80%;
+  max-width: 300px;
+}
+
+input,
+.btn {
+  width: 100%;
+  border-radius: 5px;
+}
+
+input {
+  font-family: inherit;
+  font-size: 1rem;
+  text-align: inherit;
+  margin-bottom: .75em;
+  padding: .25em;
+  border: solid 1px #404040;
+  transform: scale(1);
+  transition: transform 250ms;
+}
+
+input:focus {
+  transform: scale(1.1);
+}
+
+.btn {
+  display: inline-block;
+  padding: 1em 1.5em;
+  text-transform: uppercase;
+  font-size: 0.625rem;
+  font-weight: 900;
+  letter-spacing: 1px;
+  border: 0;
+  cursor: pointer;
+}
+
+.btn-primary {
+  background: linear-gradient( to left, #FF713B, #FFA51D);
+  color: #fff;
+  transform: scale(1);
+  transition: transform 250ms;
+}
+
+.btn-primary:hover,
+.btn-primary:focus {
+  transform: scale(1.1);
 }
 
 
